tests/fail/fs/close_stdout.stderr
error: unsupported operation: stdout cannot be closed
  --> $DIR/close_stdout.rs:LL:CC
   |
LL |         libc::close(1);
   |         ^^^^^^^^^^^^^^ stdout cannot be closed
   |
   = help: this is likely not a bug in the program; it indicates that the program performed an operation that the interpreter does not support
   = note: backtrace:
   = note: inside `main` at $DIR/close_stdout.rs:LL:CC

note: some details are omitted, run with `MIRIFLAGS=-Zmiri-backtrace=full` for a verbose backtrace

error: aborting due to previous error

